--- a/views/_partial/_contest/contests.ejs
+++ b/views/_partial/_contest/contests.ejs
@@ -94,5 +94,5 @@
 		else
 			page = parseInt(page);
 	%>
-	<%- include('pagination', {page: page, url: '/contests?page=', query: arg_query, totpage: totpage})%>
+	<%- include('../pagination', {page: page, url: '/contests?page=', query: arg_query, totpage: totpage})%>
 </div>
