--- a/views/_partial/_user/user.ejs
+++ b/views/_partial/_user/user.ejs
@@ -49,6 +49,6 @@
 
 <h2><%- __('Recent Submission') %></h2>
 
-<%- include('widget/submission_table', {submission_list: userinfo.recent}) %>
+<%- include('../widget/submission_table', {submission_list: userinfo.recent}) %>
 
 </div>
