--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,51 +3,51 @@
     <div id="wrap">
       <div class="outer">
         <section id="main">
-                  <% if (layout == 'archive') { %>
-                    <%- include('_partial/archive') %>
-                  <% } else if (layout == 'login') { %>
-                    <%- include('_partial/login') %>
-                  <% } else if (layout == 'edit') { %>
-                    <%- include('_partial/edit') %>
-                  <% } else if (layout == 'register') { %>
-                    <%- include('_partial/register') %>
-                  <% } else if (layout == 'ranklist') { %>
-                    <%- include('_partial/ranklist') %>
-                  <% } else if (layout == 'progress') { %>
-                    <%- include('_partial/progress') %>
-                  <% } else if (layout == 'problems') { %>
-                    <%- include('_partial/problems') %>
-                  <% } else if (layout == 'domains') { %>
-                    <%- include('_partial/domain') %>
-                  <% } else if (layout == 'problem_domain') { %>
-                    <%- include('_partial/problem-domain') %>
-                  <% } else if (layout == 'submissions') { %>
-                    <%- include('_partial/submissions') %>
-                  <% } else if (layout == 'problem') { %>
-                    <%- include('_partial/problem') %>
-                  <% } else if (layout == 'user') { %>
-                    <%- include('_partial/user') %>
-                  <% } else if (layout == 'contests') { %>
-                    <%- include('_partial/contests') %>
-                  <% } else if (layout == 'contest') { %>
-                    <%- include('_partial/contest') %>
-                  <% } else if (layout == 'scoreboard') { %>
-                    <%- include('_partial/scoreboard') %>
-                  <% } else if (layout == 'live') { %>
-                    <%- include('_partial/livesubmission') %>
-                  <% } else if (layout == 'highlight') { %>
-                    <%- include('_partial/highlight') %>
-                  <% } else if (layout == 'detail') { %>
-                    <%- include('_partial/judgeresult') %>
-                  <% } else if (layout == 'problem_statistic') { %>
-                    <%- include('_partial/problem-statistics') %>
-                  <% } else if (layout == 'score') { %>
-                    <%- include('_partial/score') %>
-                  <% } else if (layout == 'solution') { %>
-                    <%- include('_partial/solution') %>
-                  <% } else if (layout == 'grade_problem') { %>
-                    <%- include('_partial/problem-grade') %>
-                  <% } %>
+            <% if (layout == 'archive') { %>
+              <%- include('_partial/archive') %>
+            <% } else if (layout == 'login') { %>
+              <%- include('_partial/_user/login') %>
+            <% } else if (layout == 'edit') { %>
+              <%- include('_partial/_user/edit') %>
+            <% } else if (layout == 'register') { %>
+              <%- include('_partial/_user/register') %>
+            <% } else if (layout == 'ranklist') { %>
+              <%- include('_partial/_rank/ranklist') %>
+            <% } else if (layout == 'progress') { %>
+              <%- include('_partial/_rank/progress') %>
+            <% } else if (layout == 'problems') { %>
+              <%- include('_partial/_problem/problems') %>
+            <% } else if (layout == 'domains') { %>
+              <%- include('_partial/_problem/domain') %>
+            <% } else if (layout == 'problem_domain') { %>
+              <%- include('_partial/_problem/problem-domain') %>
+            <% } else if (layout == 'submissions') { %>
+              <%- include('_partial/_submission/submissions') %>
+            <% } else if (layout == 'problem') { %>
+              <%- include('_partial/_problem/problem') %>
+            <% } else if (layout == 'user') { %>
+              <%- include('_partial/_user/user') %>
+            <% } else if (layout == 'contests') { %>
+              <%- include('_partial/_contest/contests') %>
+            <% } else if (layout == 'contest') { %>
+              <%- include('_partial/_contest/contest') %>
+            <% } else if (layout == 'scoreboard') { %>
+              <%- include('_partial/_contest/scoreboard') %>
+            <% } else if (layout == 'live') { %>
+              <%- include('_partial/_submission/livesubmission') %>
+            <% } else if (layout == 'highlight') { %>
+              <%- include('_partial/_submission/highlight') %>
+            <% } else if (layout == 'detail') { %>
+              <%- include('_partial/_submission/judgeresult') %>
+            <% } else if (layout == 'problem_statistic') { %>
+              <%- include('_partial/_problem/problem-statistics') %>
+            <% } else if (layout == 'score') { %>
+              <%- include('_partial/_user/score') %>
+            <% } else if (layout == 'solution') { %>
+              <%- include('_partial/_problem/solution') %>
+            <% } else if (layout == 'grade_problem') { %>
+              <%- include('_partial/_problem/problem-grade') %>
+            <% } %>
           </section>
       </div>
       <%- include('_partial/mobile-nav') %>
