--- a/views/_partial/_submission/submissions.ejs
+++ b/views/_partial/_submission/submissions.ejs
@@ -35,7 +35,7 @@
 	<% if (site.CONTEST_MODE == true) { %>
 	<div class="sysmsg">考試正在進行</div>
 	<% } %>
-	<%- include('widget/submission_table', {submission_list: submission_list, ac_map: ac_map}) %>
+	<%- include('../widget/submission_table', {submission_list: submission_list, ac_map: ac_map}) %>
 	<%
 		var totpage = Math.ceil(submission_status.count / 25);
 		var page = query_filter['page'];
@@ -51,5 +51,5 @@
 		else
 			page = parseInt(page);
 	%>
-	<%- include('pagination', {page: page, url: '/submissions?page=', query: arg_query, totpage: totpage})%>
+	<%- include('../pagination', {page: page, url: '/submissions?page=', query: arg_query, totpage: totpage})%>
 </div>
