--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="/stylesheets/pure-release-0.6.0/pure-min.css">
 		<link title="default" rel="stylesheet" href="/stylesheets/pure-release-0.6.0/slide-menu.css">
 		<link title="dark" rel="stylesheet" href="/stylesheets/pure-release-0.6.0/slide-menu-dark.css" disabled="disabled"/>
+
 		<link title="default" rel="stylesheet" href="/stylesheets/chat.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -24,7 +25,18 @@
 		<script src="/javascripts/typed.js"></script>
 		<script src="/javascripts/diagram/raphael-min.js"></script>
 		<script src="/javascripts/diagram/flowchart.js"></script>
-		<link rel="stylesheet" href="/stylesheets/terminal.css">
+		<link rel="stylesheet" href="/stylesheets/terminal.css">		
+
+		<script>
+		var cookie_style = $.cookie("mystyle"); 
+		    if (cookie_style == null || cookie_style + '' == 'default') { 
+		        $("link[title='dark']").attr("disabled","disabled"); 
+		        $("link[title='default']").removeAttr('disabled');
+		    } else { 
+		        $("link[title='default']").attr("disabled","disabled"); 
+		        $("link[title='dark']").removeAttr('disabled');
+		    } 
+		</script>
 	</head>
 	<body>
 		<div id="layout">
