--- a/views/_partial/widget/disqus.ejs
+++ b/views/_partial/widget/disqus.ejs
@@ -2,7 +2,7 @@
 			<div id="disqus_thread" class="dsq-widget"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = '<%- config.DISQUS.shortname %>';
+    var disqus_shortname = '<%- config.Disqus.shortname %>';
     
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
