fixed admin new page

--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -94,7 +94,7 @@ var unitConvert = site.unitConvert;
 	</div>
 </div>
 
-<%- include('../widget/disqus')  %>
+<%- include('../_widget/disqus')  %>
 
 
 </div>
