--- a/views/_partial/_problem/solution.ejs
+++ b/views/_partial/_problem/solution.ejs
@@ -30,7 +30,7 @@
 	<h2><div class="sysmsg">解法思路未提供</div></h2>
 <% } %>
 
-<%- include('../widget/disqus')  %>
+<%- include('../_widget/disqus')  %>
 
 
 </div>
