--- a/views/_partial/archive.ejs
+++ b/views/_partial/archive.ejs
@@ -12,7 +12,7 @@
 	<div class="pure-u-1-24">
 	</div>
 	<div class="pure-u-6-24">
-		<%- include('widget/recent_problem', {recent_problems: recent_problems}) %>
-		<%- include('widget/recent_comment') %>
+		<%- include('_widget/recent_problem', {recent_problems: recent_problems}) %>
+		<%- include('_widget/recent_comment') %>
 	</div>
 </div>
