fixed CONTEST MODE

--- a/views/_partial/_submission/livesubmission.ejs
+++ b/views/_partial/_submission/livesubmission.ejs
@@ -13,7 +13,7 @@
     <h2>Auto update</h2>
 </div>
 <div class="content">
-<% if (site.CONTEST_MODE == true) { %>
+<% if (site.CONTEST.MODE == true) { %>
 	<div class="sysmsg">考試正在進行</div>
 <% } %>
 
