fixed MaxthJax parser

--- a/views/_partial/MathJax.ejs
+++ b/views/_partial/MathJax.ejs
@@ -25,3 +25,6 @@
         }
     });
 </script>
+
+<script type="text/javascript" src="/javascripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
