--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -666,3 +666,30 @@ Hides the menu at `48em`, but modify this based on your app's needs.
 .pure-table-submitowner {
     background-color: rgba(0, 0, 0, 0.2);
 }
+
+.tooltip { 
+  font-family: ChekiangShuKeSung, "Times New Roman", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  outline:none; 
+}
+.tooltip strong { line-height:30px; }
+.tooltip:hover {text-decoration:none;} 
+.tooltip .popup {
+    z-index: 10;
+    display: none; 
+    padding: 14px 20px;
+    margin-top:-30px; 
+    margin-left:28px;
+    width:300px; 
+    line-height: 1.5em;
+}
+.tooltip:hover .popup {
+    display:inline; 
+    position:absolute; 
+    color:#111;
+    border:1px 
+    solid #DCA; 
+    background:#fffAF0;
+}
+.tooltip .popup {
+    border-radius:4px;
+}
