--- a/views/_partial/_user/user.ejs
+++ b/views/_partial/_user/user.ejs
@@ -4,48 +4,145 @@
 </div>
 <div class="content">
 
-<h2><%- __('Profile') %></h2>
+<style>
+/*
+ * -- PRICING TABLE HEADER --
+ * By default, a header is black/white, and has some styles for its <h2> name.
+ */
 
-<table class="pure-table pure-table-bordered" style='width: 100%;'>
+.pricing-tables {
+	text-align: center;
+}
+.pricing-table-header {
+}
+
+.pricing-table-header h2 {
+    margin: 0;
+    padding-top: 1em;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+/*
+ * -- PRICING TABLE PRICE --
+ * Styles for the price and the corresponding <span>per month</span>
+ */
+
+.pricing-table-price {
+    font-size: 2em;
+    margin: 0.2em 0 0;
+    font-weight: 100;
+}
+
+.pricing-table-price span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 0.2em;
+    padding-bottom: 2em;
+    font-weight: 400;
+}
+
+.pricing-table-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.pricing-table-list li {
+    padding: 0.8em 0;
+    background: #f7f7f7;
+    border-bottom: 1px solid #e7e7e7;
+}
+</style>
+
+<div class="pure-g">
+	<div class="pure-u-6-24">
+		<div class="pure-u-1-1">
+			<img class="pure-u-1-1" src="http://i.imgur.com/mV053DI.png"/>
+		</div>
+		<div class="pure-u-1-1">
+			<div class="header">				<h3><%- userinfo.info.lgn  %></h2>
+				<h3><% if (userinfo.info.class == null || userinfo.info.class == '') { %>
+				<%= __('Administrator') %>
+			<% } else { %>
+				<% if (userinfo.info.class <= 2) { %>
+					<%= __('Class {{number}}', {number: userinfo.info.class}) %>
+				<% } else { %>
+					<%= __('Visitor Class {{number}}', {number: userinfo.info.class-2}) %>
+				<% } %>
+			<% } %></h3>
+			</div>
+		</div>
+		<div class="pure-g pricing-tables">
+			<div class="pure-u-1-3">
+				<div class="pricing-table pricing-table-enterprise">
+				    <div class="pricing-table-header">
+				        <h2>Accept</h2>
+
+				        <span class="pricing-table-price">
+				            <%- userinfo.solve.length %>
+				        </span>
+				    </div>
+				</div>
+			</div>
+			<div class="pure-u-1-3">
+				<div class="pricing-table pricing-table-enterprise">
+				    <div class="pricing-table-header">
+				        <h2>Sub</h2>
+
+				        <span class="pricing-table-price">
+				            Na
+				        </span>
+				    </div>
+				</div>
+			</div>
+			<div class="pure-u-1-3">
+				<div class="pricing-table pricing-table-enterprise">
+				    <div class="pricing-table-header">
+				        <h2>Exp</h2>
+
+				        <span class="pricing-table-price">
+				            Na
+				        </span>
+				    </div>
+				</div>
+			</div>
+			<div class="pure-u-1 pure-u-md-1-1">
+				<ul class="pricing-table-list">
+					<li><%- userinfo.info.ip %></li>
+					<li><%- config.unitConvert('date', new Date(userinfo.info.ts2)) %></li>
+				</ui>
+			</div>
+		</div>
+	</div>
+	<div class="pure-u-18-24">
+		<div class="pure-u-1-1">
+			<div class="content">
+				<p>
+					<%= userinfo.info.motto %>
+				</p>
+			</div>
+		</div>
+		<div class="pure-u-1-1">
+			<div class="content">
+				<table class="pure-table pure-table-bordered" style='width: 100%;'>
+	<thead>
+		<th><%= __('Solved List') %></td>
+	</thead>
 	<tbody>
 	<tr>
-		<th><%= __('Class') %></th>
-		<% if (userinfo.info.class == null || userinfo.info.class == '') { %>
-			<td><%= __('Administrator') %></td>
-		<% } else { %>
-			<% if (userinfo.info.class <= 2) { %>
-				<td><%= __('Class {{number}}', {number: userinfo.info.class}) %></td>
-			<% } else { %>
-				<td><%= __('Visitor Class {{number}}', {number: userinfo.info.class-2}) %></td>
-			<% } %>
-		<% } %>
-	</tr>
-	<tr>
-			<th><%= __('Motto') %></td>
-			<td><%= userinfo.info.motto %></td>
-	</tr>
-	<tr>
-		<th><%= __('#Solved List') %></td>
 		<td>
 			<% for (var i = 0; i < userinfo.solve.length; i++) { %>
 				<a href='/submissions?pid=<%- userinfo.solve[i].pid %>&uid=<%- userinfo.info.uid %>'><%- userinfo.solve[i].pid %></a>
 			<% } %>
 		</td>
 	</tr>
-	<tr>
-		<th><%= __('#Solved') %></th>
-		<td><%- userinfo.solve.length %></td>
-	</tr>
-	<tr>
-		<th><%= __('IP') %></th>
-		<td><%- userinfo.info.ip %></td>
-	</tr>
-	<tr>
-		<th><%= __('Last Login') %></th>
-		<td><%- config.unitConvert('date', new Date(userinfo.info.ts2)) %></td>
-	</tr>
 	</tbody>
 </table>
+			</div>
+		</div>
+	</div>
+</div>
 
 <h2><%- __('Recent Submission') %></h2>
 
