--- a/views/_partial/_user/user.ejs
+++ b/views/_partial/_user/user.ejs
@@ -56,7 +56,7 @@
 </style>
 
 <div class="pure-g">
-	<div class="pure-u-6-24">
+	<div class="pure-u-1 pure-u-lg-8-24">
 		<div class="pure-u-1-1">
 			<img class="pure-u-1-1" src="http://i.imgur.com/mV053DI.png"/>
 		</div>
@@ -110,12 +110,14 @@
 			<div class="pure-u-1 pure-u-md-1-1">
 				<ul class="pricing-table-list">
 					<li><%- userinfo.info.ip %></li>
-					<li><%- config.unitConvert('date', new Date(userinfo.info.ts2)) %></li>
+					<li>Last login <%- config.unitConvert('date', new Date(userinfo.info.ts2)) %></li>
 				</ui>
 			</div>
 		</div>
 	</div>
-	<div class="pure-u-18-24">
+	<div class="pure-u-1 pure-u-lg-1-24">
+	</div>
+	<div class="pure-u-1 pure-u-lg-15-24">
 		<div class="pure-u-1-1">
 			<div class="content">
 				<p>
@@ -124,22 +126,20 @@
 			</div>
 		</div>
 		<div class="pure-u-1-1">
-			<div class="content">
-				<table class="pure-table pure-table-bordered" style='width: 100%;'>
-	<thead>
-		<th><%= __('Solved List') %></td>
-	</thead>
-	<tbody>
-	<tr>
-		<td>
-			<% for (var i = 0; i < userinfo.solve.length; i++) { %>
-				<a href='/submissions?pid=<%- userinfo.solve[i].pid %>&uid=<%- userinfo.info.uid %>'><%- userinfo.solve[i].pid %></a>
-			<% } %>
-		</td>
-	</tr>
-	</tbody>
-</table>
-			</div>
+			<table class="pure-table pure-table-bordered" style='width: 100%;'>
+			<thead>
+				<th><%= __('Solved List') %></td>
+			</thead>
+			<tbody>
+			<tr>
+				<td>
+					<% for (var i = 0; i < userinfo.solve.length; i++) { %>
+						<a href='/submissions?pid=<%- userinfo.solve[i].pid %>&uid=<%- userinfo.info.uid %>'><%- userinfo.solve[i].pid %></a>
+					<% } %>
+				</td>
+			</tr>
+			</tbody>
+			</table>
 		</div>
 	</div>
 </div>
