--- a/views/_partial/archive.ejs
+++ b/views/_partial/archive.ejs
@@ -4,14 +4,14 @@
 </div>
 
 <div class="pure-g">
-	<div class="pure-u-14-24">
+	<div class="pure-u-1 pure-u-lg-14-24">
 		<div class="content">
 			<%- archive_content %>
 		</div>
 	</div>
-	<div class="pure-u-1-24">
+	<div class="pure-u-1 pure-u-lg-1-24">
 	</div>
-	<div class="pure-u-6-24">
+	<div class="pure-u-1 pure-u-lg-6-24">
 		<%- include('_widget/recent_problem', {recent_problems: recent_problems}) %>
 		<%- include('_widget/recent_comment') %>
 	</div>
