--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -10,6 +10,7 @@
 		</title>
 		<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" /> -->
 		<link rel="stylesheet" href="/stylesheets/pure-release-0.6.0/pure-min.css">
+		<link rel="stylesheet" href="/stylesheets/pure-release-0.6.0/grids-responsive-min.css">
 		<link title="default" rel="stylesheet" href="/stylesheets/pure-release-0.6.0/slide-menu.css">
 		<link title="dark" rel="stylesheet" href="/stylesheets/pure-release-0.6.0/slide-menu-dark.css" disabled="disabled"/>
 
