--- a/views/_partial/_user/edit.ejs
+++ b/views/_partial/_user/edit.ejs
@@ -37,4 +37,23 @@
         </div>
     </fieldset>
 </form>
+
+<form action="/user/upload/avatar" method="post" class="pure-form pure-form-stacked" enctype="multipart/form-data">
+    <fieldset>
+        <legend>Avatar</legend>
+		<div class="pure-g">
+            <div class="pure-u-1 pure-u-md-11-24">
+				<img class="pure-u-1-1" src="/images/avatar/thumb--<%= user['uid'] %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
+			</div>
+			<div class="pure-u-1 pure-u-md-1-24">
+			</div>
+			<div class="pure-u-1 pure-u-md-11-24">
+				<label for="avatar">Select Image File</label>
+				<input class="pure-input-2-3" name="avatar" type="file" accept="application/x-zip-compressed,image/*">
+				<button type="submit" name="submit" class="pure-button pure-button-primary"><%= __('Upload Avatar') %></button>
+			</div>
+		</div>
+    </fieldset>
+</form>
+
 </div>
