--- a/views/_partial/_user/user.ejs
+++ b/views/_partial/_user/user.ejs
@@ -58,7 +58,7 @@
 <div class="pure-g">
 	<div class="pure-u-1 pure-u-lg-8-24">
 		<div class="pure-u-1-1">
-			<img class="pure-u-1-1" src="http://i.imgur.com/mV053DI.png"/>
+			<img class="pure-u-1-1" src="/images/avatar/thumb--<%= userinfo.info.uid %>" onerror="this.src='http://i.imgur.com/mV053DI.png'"/>
 		</div>
 		<div class="pure-u-1-1">
 			<div class="header">				<h3><%- userinfo.info.lgn  %></h2>
