--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -716,8 +716,36 @@ abbr[title] {
     color:#111;
     border:1px 
     solid #DCA; 
-    background:#fffAF0;
+    background: #fffAF0;
 }
 .tooltip .popup {
     border-radius:4px;
+}
+/* tabs */
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4,
+#tab5:checked ~ #content5 {
+  display: block;
+}
+.tab_container section {
+   display: none;
+}
+.tab_container [id^="tab"]:checked + label {
+  background: #1f8dd6;
+  box-shadow: inset 0 3px #0CE;
+  color: white;
+}
+.tab_container input {
+  display: none;
+}
+.tab_container label {
+  display: block;
+  float: left;
+  width: 20%;
+  color: #757575;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
 }
