--- a/views/admin/_partial/announcement.ejs
+++ b/views/admin/_partial/announcement.ejs
@@ -1,5 +1,15 @@
 <script type="text/javascript" src="/javascripts/marked.js"></script>
 <script type="text/javascript" src="/javascripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script src="/javascripts/sh/scripts/shCore.js" type="text/javascript"></script>
+<script src="/javascripts/sh/scripts/shAutoloader.js" type="text/javascript"></script>
+<script src="/javascripts/sh/scripts/shBrushPlain.js" type="text/javascript"></script>
+<script src="/javascripts/sh/scripts/shBrushCpp.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/shThemeDefault.css">
+
+<script src="/javascripts/me/js/medium-editor.js" type="text/javascript"></script>
+<script src="/javascripts/me/js/me-markdown.standalone.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/javascripts/me/css/medium-editor.css">
+<link rel="stylesheet" type="text/css" href="/javascripts/me/css/default.css">
 
 <div class="header">
 	<h1 class='article-title'><%= __('Edit Announcement') %></h1>
@@ -21,7 +31,7 @@
             <form action="update/announcement" method="post" class="pure-form  pure-form-stacked">
                 <fieldset>
 
-                        <textarea name="textbox" id="textbox" class="pure-input-1" style="font-family: Courier, Courier New, Microsoft JhengHei, MingLiU; min-height: 800px;"><%= md_content %></textarea>
+                    <textarea name="textbox" id="textbox" class="pure-input-1 markdown" style="font-family: Courier, Courier New, Microsoft JhengHei, MingLiU; min-height: 800px;"><%= md_content %></textarea>
 
                     <div class="pure-controls">
                         <button type="submit" name="submit" id="submit" class="pure-button pure-button-primary"><%= __('Update') %></button>
@@ -31,7 +41,7 @@
         </div>
     </section>
     <section id="content2" class="tab-content">
-        <div class="pure-u-1-1 content" id="preview-textbox" style="border-color: #f0f0f0; border-style: solid;">
+        <div class="pure-u-1-1 content editor" id="preview-textbox" style="border-color: #f0f0f0; border-style: solid;">
         </div>
     </section>
     <!--content goes here-->
@@ -54,12 +64,21 @@ function latex_filter(text) {
 function after_footer() {
     var math = document.getElementById("preview-textbox");
     MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);
+    SyntaxHighlighter.highlight(math);
+
 };
 function render() {
+    var renderer = new marked.Renderer();
+
+    renderer.code = function (code, language) {
+        if (!language)  language = 'plain';
+        return '<pre class="brush: ' + language + ';">' + code + '</pre>';
+    };
     var html = $("#textbox").val();
     html = latex_filter(html);
-    $("#preview-textbox").html(marked(html));
-    after_footer();
+    $("#preview-textbox").html(marked(html, { renderer: renderer })).promise().done(function() {
+        after_footer();
+    }); 
 };
 $(document).delegate('#textbox', 'keydown', function(e) {
   var keyCode = e.keyCode || e.which;
@@ -84,5 +103,14 @@ $(document).delegate('#textbox', 'keyup', function(e) {
 });
 $(document).ready(function() {
     render();
+    new MediumEditor(document.querySelector(".editor"), {
+        buttons: ['bold', 'italic', 'underline', 'anchor', 'h2', 'h3', 'quote'],
+        extensions: {
+            markdown: new MeMarkdown(function (md) {
+                var markDownEl = document.querySelector(".markdown");
+                markDownEl.value = md;
+            })
+        }
+    });
 });
 </script>
