--- a/views/admin/_partial/problem.ejs
+++ b/views/admin/_partial/problem.ejs
@@ -6,6 +6,11 @@
 <script src="/javascripts/sh/scripts/shBrushCpp.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/shThemeDefault.css">
 
+<script src="/javascripts/me/js/medium-editor.js" type="text/javascript"></script>
+<script src="/javascripts/me/js/me-markdown.standalone.js" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="/javascripts/me/css/medium-editor.css">
+<link rel="stylesheet" type="text/css" href="/javascripts/me/css/default.css">
+
 <div class="header">
 	<h1 class='article-title'><%= __('Edit Problem') %></h1>
     <h2><%= prob_config.config.pid %>. <%= prob_config.config.ttl %></h2>
@@ -81,7 +86,7 @@
             <textarea name="textbox" id="textbox" class="pure-input-1" style="font-family: Courier, Courier New, Microsoft JhengHei, MingLiU; min-height: 800px;"><%= prob_config.md %></textarea>
         </section>
         <section id="content2" class="tab-content">
-            <div class="pure-u-1-1" id="preview-textbox">
+            <div class="pure-u-1-1" id="preview-textbox" style="border-color: #f0f0f0; border-style: solid; min-height: 512px;">
             </div>
         </section>
 
@@ -89,7 +94,7 @@
             <textarea name="textbox2" id="textbox2" class="pure-input-1" style="font-family: Courier, Courier New, Microsoft JhengHei, MingLiU; min-height: 600px;"><%= prob_config.solution_md %></textarea>
         </section>
         <section id="content4" class="tab-content">
-            <div class="pure-u-1-1" id="preview-textbox2">
+            <div class="pure-u-1-1" id="preview-textbox2" style="border-color: #f0f0f0; border-style: solid; min-height: 512px;">
             </div>
         </section>
     </div>
@@ -197,5 +202,23 @@ $(document).delegate('#textbox2', 'keyup', function(e) {
 });
 $(document).ready(function() {
     render();
+    new MediumEditor(document.querySelector("#preview-textbox"), {
+        buttons: ['bold', 'italic', 'underline', 'anchor', 'h2', 'h3', 'quote'],
+        extensions: {
+            markdown: new MeMarkdown(function (md) {
+                var markDownEl = document.querySelector("#textbox");
+                markDownEl.value = md;
+            })
+        }
+    });
+    new MediumEditor(document.querySelector("#preview-textbox2"), {
+        buttons: ['bold', 'italic', 'underline', 'anchor', 'h2', 'h3', 'quote'],
+        extensions: {
+            markdown: new MeMarkdown(function (md) {
+                var markDownEl = document.querySelector("#textbox2");
+                markDownEl.value = md;
+            })
+        }
+    });
 });
 </script>
