--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -733,8 +733,8 @@ abbr[title] {
    display: none;
 }
 .tab_container [id^="tab"]:checked + label {
-  background: #1f8dd6;
   box-shadow: inset 0 3px #0CE;
+  background: #252423;
   color: white;
 }
 .tab_container input {
@@ -744,7 +744,9 @@ abbr[title] {
   display: block;
   float: left;
   width: 20%;
-  color: #757575;
+  color: white;
+
+  background: #343434;
   cursor: pointer;
   text-decoration: none;
   text-align: center;
