--- a/views/admin/_partial/problem.ejs
+++ b/views/admin/_partial/problem.ejs
@@ -1,7 +1,6 @@
 <script type="text/javascript" src="/javascripts/marked.js"></script>
 <script type="text/javascript" src="/javascripts/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="/javascripts/sh/scripts/shCore.js" type="text/javascript"></script>
-<script src="/javascripts/sh/scripts/shAutoloader.js" type="text/javascript"></script>
 <script src="/javascripts/sh/scripts/shBrushPlain.js" type="text/javascript"></script>
 <script src="/javascripts/sh/scripts/shBrushCpp.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/stylesheets/shThemeDefault.css">
@@ -164,12 +163,12 @@ function latex_filter(text) {
     return out;
 };
 function after_footer() {
-    var math = document.getElementById("preview-textbox");
+    var math;
+    math = document.getElementById("preview-textbox");
     MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);
-    SyntaxHighlighter.highlight(math);
+
     math = document.getElementById("preview-textbox2");
     MathJax.Hub.Queue(["Typeset",MathJax.Hub,math]);
-    SyntaxHighlighter.highlight(math);
 };
 function render() {
     var renderer = new marked.Renderer();
@@ -189,13 +188,34 @@ function render() {
         after_footer();
     });
 };
-$(document).delegate('#textbox', 'keyup', function(e) {
-    render();
+$("#tab2").click(function() {
+    if ($(this).is(':checked'))
+        render();
 });
-$(document).delegate('#textbox2', 'keyup', function(e) {
-    render();
+$("#tab4").click(function() {
+    if ($(this).is(':checked'))
+        render();
 });
-$(document).ready(function() {
-    render();
-});
+
+var list = document.getElementsByTagName("form");
+for (var i = 0; i < list.length; i++) {
+    list[i].addEventListener("submit", function(event){
+        var answer = confirm("Make sure that problem setting as you want.");
+        if (!answer){ event.preventDefault(); }
+    });
+}
+
+var aElems = document.getElementsByTagName('a');
+
+for (var i = 0; i < aElems.length; i++) {
+    aElems[i].onclick = function() {
+        var check = confirm("Are you sure you want to leave?");
+        if (check == true) {
+            return true;
+        }
+        else {
+            return false;
+        }
+    };
+}
 </script>
